--- a/Classes/.project
+++ b/Classes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Classes</name>
+	<name>CS252Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
